i think i got it

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,36 +2,36 @@ variables:
   GIT_SUBMODULE_STRATEGY: recursive
   DOCKER_TLS_CERTDIR: "/certs"
   DOCKER_BASE_IMG: $CI_REGISTRY_IMAGE/plb-base-img:latest
-  # CCACHE_TEST: ccache_${CI_COMMIT_REF_NAME}_test/
-  # CCACHE_REL_CLANG_SER: ccache_${CI_COMMIT_REF_NAME}_rel_clang_ser/
-  # CCACHE_REL_CLANG_PAR: ccache_${CI_COMMIT_REF_NAME}_rel_clang_par/
-  # CCACHE_REL_GCC_SER: ccache_${CI_COMMIT_REF_NAME}_rel_gcc_ser/
-  # CCACHE_REL_GCC_PAR: ccache_${CI_COMMIT_REF_NAME}_rel_gcc_par/
-  # CCACHE_DEB_CLANG_SER: ccache_${CI_COMMIT_REF_NAME}_deb_clang_ser/
-  # CCACHE_DEB_CLANG_PAR: ccache_${CI_COMMIT_REF_NAME}_deb_clang_par/
-  # CCACHE_DEB_GCC_SER: ccache_${CI_COMMIT_REF_NAME}_deb_gcc_ser/
-  # CCACHE_DEB_GCC_PAR: ccache_${CI_COMMIT_REF_NAME}_deb_gcc_par/
+  CCACHE_TEST: ccache_${CI_COMMIT_REF_NAME}_test/
+  CCACHE_REL_CLANG_SER: ccache_${CI_COMMIT_REF_NAME}_rel_clang_ser/
+  CCACHE_REL_CLANG_PAR: ccache_${CI_COMMIT_REF_NAME}_rel_clang_par/
+  CCACHE_REL_GCC_SER: ccache_${CI_COMMIT_REF_NAME}_rel_gcc_ser/
+  CCACHE_REL_GCC_PAR: ccache_${CI_COMMIT_REF_NAME}_rel_gcc_par/
+  CCACHE_DEB_CLANG_SER: ccache_${CI_COMMIT_REF_NAME}_deb_clang_ser/
+  CCACHE_DEB_CLANG_PAR: ccache_${CI_COMMIT_REF_NAME}_deb_clang_par/
+  CCACHE_DEB_GCC_SER: ccache_${CI_COMMIT_REF_NAME}_deb_gcc_ser/
+  CCACHE_DEB_GCC_PAR: ccache_${CI_COMMIT_REF_NAME}_deb_gcc_par/
 
 
-# cache:
-  #   untracked: true
-  #   key: "$CI_PROJECT_ID"
-  #   paths:
-  #       - ${PWD}/${CCACHE_TEST}
-  #       - ${PWD}/${CCACHE_REL_CLANG_SER}
-  #       - ${PWD}/${CCACHE_REL_CLANG_PAR}
-  #       - ${PWD}/${CCACHE_REL_GCC_SER}
-  #       - ${PWD}/${CCACHE_REL_GCC_PAR}
-  #       - ${PWD}/${CCACHE_DEB_CLANG_SER}
-  #       - ${PWD}/${CCACHE_DEB_CLANG_PAR}
-  #       - ${PWD}/${CCACHE_DEB_GCC_SER}
-  #       - ${PWD}/${CCACHE_DEB_GCC_PAR}
+cache:
+    untracked: true
+    key: "$CI_PROJECT_ID"
+    paths:
+        - ${PWD}/${CCACHE_TEST}
+        - ${PWD}/${CCACHE_REL_CLANG_SER}
+        - ${PWD}/${CCACHE_REL_CLANG_PAR}
+        - ${PWD}/${CCACHE_REL_GCC_SER}
+        - ${PWD}/${CCACHE_REL_GCC_PAR}
+        - ${PWD}/${CCACHE_DEB_CLANG_SER}
+        - ${PWD}/${CCACHE_DEB_CLANG_PAR}
+        - ${PWD}/${CCACHE_DEB_GCC_SER}
+        - ${PWD}/${CCACHE_DEB_GCC_PAR}
 
 stages:
     - prepare_docker
     - build_cmake
-    # - regression_tests
-    # - deploy
+    - regression_tests
+    - deploy
 
 # Build and test stages are using a docker image containing package
 # needed to build and run a Palabos application.
@@ -47,168 +47,165 @@ build_base_docker_img:
     - docker build --tag $DOCKER_BASE_IMG .
     - docker push $DOCKER_BASE_IMG
 
-# ## Regression tests
-# test:
-#     stage: regression_tests
-#     image: $DOCKER_BASE_IMG
-#     before_script:
-#         - mkdir -p ${CCACHE_TEST}
-#         - export CCACHE_BASEDIR=${PWD}
-#         - export CCACHE_DIR=${PWD}/${CCACHE_TEST}
-#         - ccache --set-config=compression=true
-#         - ccache --set-config=max_size=1000M
+## Regression tests
+test:
+    stage: regression_tests
+    image: $DOCKER_BASE_IMG
+    before_script:
+        - mkdir -p ${CCACHE_TEST}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_TEST}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
 
-#     script: 
-#         - pwd
-#         - cd build
-#         - cmake .. -DCMAKE_BUILD_TYPE=Test
-#         - cmake --build .
-#         - cmake --build . -- test
+    script: 
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Test
+        - cmake --build .
+        - cmake --build . -- test
 
 ## Test compilation with CMake, everything in examples & utility directory
 release_clang_serial:
     stage: build_cmake
     image: $DOCKER_BASE_IMG
-    # before_script:
-    #     - mkdir -p ${CCACHE_REL_CLANG_SER}
-    #     - export CCACHE_BASEDIR=${PWD}
-    #     - export CCACHE_DIR=${PWD}/${CCACHE_REL_CLANG_SER}
-    #     - ccache --set-config=compression=true
-    #     - ccache --set-config=max_size=1000M
+    before_script:
+        - mkdir -p ${CCACHE_REL_CLANG_SER}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_REL_CLANG_SER}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
     
     script: 
-        - echo $CI_COMMIT_REF_NAME
-        - echo $CI_COMMIT_BRANCH
-        - echo "$CI_JOB_STAGE"
-        # - pwd
-        # - cd build
-        # - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=OFF
-        # - cmake --build . -j4
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=OFF
+        - cmake --build . -j4
 
-# release_clang_parallel:
-#     stage: build_cmake
-#     image: $DOCKER_BASE_IMG
-#     before_script:
-#         - mkdir -p ${CCACHE_REL_CLANG_PAR}
-#         - export CCACHE_BASEDIR=${PWD}
-#         - export CCACHE_DIR=${PWD}/${CCACHE_REL_CLANG_PAR}
-#         - ccache --set-config=compression=true
-#         - ccache --set-config=max_size=1000M
+release_clang_parallel:
+    stage: build_cmake
+    image: $DOCKER_BASE_IMG
+    before_script:
+        - mkdir -p ${CCACHE_REL_CLANG_PAR}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_REL_CLANG_PAR}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
     
-#     script: 
-#         - pwd
-#         - cd build
-#         - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=ON
-#         - cmake --build . -j4
+    script: 
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=ON
+        - cmake --build . -j4
 
-# release_gcc_serial:
-#     stage: build_cmake
-#     image: $DOCKER_BASE_IMG
-#     before_script:
-#         - mkdir -p ${CCACHE_REL_GCC_SER}
-#         - export CCACHE_BASEDIR=${PWD}
-#         - export CCACHE_DIR=${PWD}/${CCACHE_REL_GCC_SER}
-#         - ccache --set-config=compression=true
-#         - ccache --set-config=max_size=1000M
+release_gcc_serial:
+    stage: build_cmake
+    image: $DOCKER_BASE_IMG
+    before_script:
+        - mkdir -p ${CCACHE_REL_GCC_SER}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_REL_GCC_SER}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
     
-#     script: 
-#         - pwd
-#         - cd build
-#         - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=OFF
-#         - cmake --build . -j4
+    script: 
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=OFF
+        - cmake --build . -j4
         
-# release_gcc_parallel:
-#     stage: build_cmake
-#     image: $DOCKER_BASE_IMG
-#     before_script:
-#         - mkdir -p ${CCACHE_REL_GCC_PAR}
-#         - export CCACHE_BASEDIR=${PWD}
-#         - export CCACHE_DIR=${PWD}/${CCACHE_REL_GCC_PAR}
-#         - ccache --set-config=compression=true
-#         - ccache --set-config=max_size=1000M
+release_gcc_parallel:
+    stage: build_cmake
+    image: $DOCKER_BASE_IMG
+    before_script:
+        - mkdir -p ${CCACHE_REL_GCC_PAR}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_REL_GCC_PAR}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
 
     
-#     script: 
-#         - pwd
-#         - cd build
-#         - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=ON
-#         - cmake --build . -j4
+    script: 
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=ON
+        - cmake --build . -j4
 
-# debug_clang_serial:
-#     stage: build_cmake
-#     image: $DOCKER_BASE_IMG
-#     before_script:
-#         - mkdir -p ${CCACHE_DEB_CLANG_SER}
-#         - export CCACHE_BASEDIR=${PWD}
-#         - export CCACHE_DIR=${PWD}/${CCACHE_DEB_CLANG_SER}
-#         - ccache --set-config=compression=true
-#         - ccache --set-config=max_size=1000M
+debug_clang_serial:
+    stage: build_cmake
+    image: $DOCKER_BASE_IMG
+    before_script:
+        - mkdir -p ${CCACHE_DEB_CLANG_SER}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_DEB_CLANG_SER}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
     
-#     script: 
-#         - pwd
-#         - cd build
-#         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=OFF
-#         - cmake --build . -j4
+    script: 
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=OFF
+        - cmake --build . -j4
 
-# debug_clang_parallel:
-#     stage: build_cmake
-#     image: $DOCKER_BASE_IMG
-#     before_script:
-#         - mkdir -p ${CCACHE_DEB_CLANG_PAR}
-#         - export CCACHE_BASEDIR=${PWD}
-#         - export CCACHE_DIR=${PWD}/${CCACHE_DEB_CLANG_PAR}
-#         - ccache --set-config=compression=true
-#         - ccache --set-config=max_size=1000M
+debug_clang_parallel:
+    stage: build_cmake
+    image: $DOCKER_BASE_IMG
+    before_script:
+        - mkdir -p ${CCACHE_DEB_CLANG_PAR}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_DEB_CLANG_PAR}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
 
-#     script: 
-#         - pwd
-#         - cd build
-#         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=ON
-#         - cmake --build . -j4
+    script: 
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=ON
+        - cmake --build . -j4
 
-# debug_gcc_serial:
-#     stage: build_cmake
-#     image: $DOCKER_BASE_IMG
-#     before_script:
-#         - mkdir -p ${CCACHE_DEB_GCC_SER}
-#         - export CCACHE_BASEDIR=${PWD}
-#         - export CCACHE_DIR=${PWD}/${CCACHE_DEB_GCC_SER}
-#         - ccache --set-config=compression=true
-#         - ccache --set-config=max_size=1000M
+debug_gcc_serial:
+    stage: build_cmake
+    image: $DOCKER_BASE_IMG
+    before_script:
+        - mkdir -p ${CCACHE_DEB_GCC_SER}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_DEB_GCC_SER}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
 
-#     script: 
-#         - pwd
-#         - cd build
-#         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=OFF
-#         - cmake --build . -j4
+    script: 
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=OFF
+        - cmake --build . -j4
         
-# debug_gcc_parallel:
-#     stage: build_cmake
-#     image: $DOCKER_BASE_IMG
-#     before_script:
-#         - mkdir -p ${CCACHE_DEB_GCC_PAR}
-#         - export CCACHE_BASEDIR=${PWD}
-#         - export CCACHE_DIR=${PWD}/${CCACHE_DEB_GCC_PAR}
-#         - ccache --set-config=compression=true
-#         - ccache --set-config=max_size=1000M
+debug_gcc_parallel:
+    stage: build_cmake
+    image: $DOCKER_BASE_IMG
+    before_script:
+        - mkdir -p ${CCACHE_DEB_GCC_PAR}
+        - export CCACHE_BASEDIR=${PWD}
+        - export CCACHE_DIR=${PWD}/${CCACHE_DEB_GCC_PAR}
+        - ccache --set-config=compression=true
+        - ccache --set-config=max_size=1000M
 
-#     script: 
-#         - pwd
-#         - cd build
-#         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=ON
-#         - cmake --build . -j4
+    script: 
+        - pwd
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=ON
+        - cmake --build . -j4
         
-# pages:
-#     stage: deploy
-#     image: $DOCKER_BASE_IMG
-#     script:
-#         - pwd
-#         - mkdir -p public/docs
-#         - doxygen Doxyfile
-#     artifacts:
-#         paths:
-#         - public
-#     only:
-#         - master
+pages:
+    stage: deploy
+    image: $DOCKER_BASE_IMG
+    script:
+        - pwd
+        - mkdir -p public/docs
+        - doxygen Doxyfile
+    artifacts:
+        paths:
+        - public
+    only:
+        - master
 
 
