--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,30 +2,32 @@ variables:
   GIT_SUBMODULE_STRATEGY: recursive
   DOCKER_TLS_CERTDIR: "/certs"
   DOCKER_BASE_IMG: $CI_REGISTRY_IMAGE/plb-base-img:latest
-  CCACHE_TEST: ccache_${CI_COMMIT_REF_NAME}_test/
-  CCACHE_REL_CLANG_SER: ccache_${CI_COMMIT_REF_NAME}_rel_clang_ser/
-  CCACHE_REL_CLANG_PAR: ccache_${CI_COMMIT_REF_NAME}_rel_clang_par/
-  CCACHE_REL_GCC_SER: ccache_${CI_COMMIT_REF_NAME}_rel_gcc_ser/
-  CCACHE_REL_GCC_PAR: ccache_${CI_COMMIT_REF_NAME}_rel_gcc_par/
-  CCACHE_DEB_CLANG_SER: ccache_${CI_COMMIT_REF_NAME}_deb_clang_ser/
-  CCACHE_DEB_CLANG_PAR: ccache_${CI_COMMIT_REF_NAME}_deb_clang_par/
-  CCACHE_DEB_GCC_SER: ccache_${CI_COMMIT_REF_NAME}_deb_gcc_ser/
-  CCACHE_DEB_GCC_PAR: ccache_${CI_COMMIT_REF_NAME}_deb_gcc_par/
+  CCACHE_BASE: ccache/
+  CCACHE_TEST: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_test/
+  CCACHE_REL_CLANG_SER: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_rel_clang_ser/
+  CCACHE_REL_CLANG_PAR: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_rel_clang_par/
+  CCACHE_REL_GCC_SER: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_rel_gcc_ser/
+  CCACHE_REL_GCC_PAR: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_rel_gcc_par/
+  CCACHE_DEB_CLANG_SER: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_deb_clang_ser/
+  CCACHE_DEB_CLANG_PAR: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_deb_clang_par/
+  CCACHE_DEB_GCC_SER: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_deb_gcc_ser/
+  CCACHE_DEB_GCC_PAR: ${CI_PROJECT_NAMESPACE}/${CI_COMMIT_REF_NAME}_deb_gcc_par/
 
 
 cache:
     untracked: true
     key: "$CI_PROJECT_ID"
     paths:
-        - ${PWD}/${CCACHE_TEST}
-        - ${PWD}/${CCACHE_REL_CLANG_SER}
-        - ${PWD}/${CCACHE_REL_CLANG_PAR}
-        - ${PWD}/${CCACHE_REL_GCC_SER}
-        - ${PWD}/${CCACHE_REL_GCC_PAR}
-        - ${PWD}/${CCACHE_DEB_CLANG_SER}
-        - ${PWD}/${CCACHE_DEB_CLANG_PAR}
-        - ${PWD}/${CCACHE_DEB_GCC_SER}
-        - ${PWD}/${CCACHE_DEB_GCC_PAR}
+        - ${PWD}/${CCACHE_BASE}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_TEST}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_REL_CLANG_SER}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_REL_CLANG_PAR}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_REL_GCC_SER}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_REL_GCC_PAR}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_DEB_CLANG_SER}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_DEB_CLANG_PAR}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_DEB_GCC_SER}
+        - ${PWD}/${CCACHE_BASE}/${CCACHE_DEB_GCC_PAR}
 
 stages:
     - prepare_docker
@@ -53,8 +55,8 @@ test:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_TEST}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_TEST}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_TEST}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
 
@@ -71,8 +73,8 @@ release_clang_serial:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_REL_CLANG_SER}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_REL_CLANG_SER}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_REL_CLANG_SER}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
     
@@ -87,8 +89,8 @@ release_clang_parallel:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_REL_CLANG_PAR}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_REL_CLANG_PAR}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_REL_CLANG_PAR}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
     
@@ -103,8 +105,8 @@ release_gcc_serial:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_REL_GCC_SER}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_REL_GCC_SER}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_REL_GCC_SER}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
     
@@ -119,8 +121,8 @@ release_gcc_parallel:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_REL_GCC_PAR}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_REL_GCC_PAR}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_REL_GCC_PAR}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
 
@@ -136,8 +138,8 @@ debug_clang_serial:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_DEB_CLANG_SER}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_DEB_CLANG_SER}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_DEB_CLANG_SER}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
     
@@ -152,8 +154,8 @@ debug_clang_parallel:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_DEB_CLANG_PAR}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_DEB_CLANG_PAR}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_DEB_CLANG_PAR}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
 
@@ -168,8 +170,8 @@ debug_gcc_serial:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_DEB_GCC_SER}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_DEB_GCC_SER}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_DEB_GCC_SER}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
 
@@ -184,8 +186,8 @@ debug_gcc_parallel:
     image: $DOCKER_BASE_IMG
     before_script:
         - mkdir -p ${CCACHE_DEB_GCC_PAR}
-        - export CCACHE_BASEDIR=${PWD}
-        - export CCACHE_DIR=${PWD}/${CCACHE_DEB_GCC_PAR}
+        - export CCACHE_BASEDIR=${PWD}/${CCACHE_BASE}
+        - export CCACHE_DIR=${PWD}/${CCACHE_BASE}/${CCACHE_DEB_GCC_PAR}
         - ccache --set-config=compression=true
         - ccache --set-config=max_size=1000M
 
