added regression test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,6 +143,7 @@ add_subdirectory(examples/codesByTopic/scalarField)
 add_subdirectory(examples/codesByTopic/shanChenMultiPhase)
 add_subdirectory(examples/codesByTopic/smagorinskyModel)
 add_subdirectory(examples/codesByTopic/transientStatistics)
+add_subdirectory(examples/codesByTopic/unsignedTypes)
 add_subdirectory(examples/codesByTopic/userInput)
 add_subdirectory(examples/codesByTopic/aneurysm_xdmf_hdf5_output)
 add_subdirectory(examples/codesByTopic/TRTdynamics)
