--- a/examples/codesByTopic/asinariDynamics/CMakeLists.txt
+++ b/examples/codesByTopic/asinariDynamics/CMakeLists.txt
@@ -29,7 +29,7 @@ if(BUILD_TESTING)
     add_custom_target(${PROJECT_NAME}_test_mpi
         ALL
         DEPENDS ${PROJECT_NAME}
-        COMMAND "LSAN_OPTIONS=suppressions=${CMAKE_CURRENT_SOURCE_DIR}/test/LAsan.supp" mpirun --allow-run-as-root -np 4 ./${PROJECT_NAME} > test/output_mpi.dat || (cat test/output_mpi.dat\; exit 1)
+        COMMAND "LSAN_OPTIONS=suppressions=${CMAKE_CURRENT_SOURCE_DIR}/test/LAsan.supp" mpirun --allow-run-as-root -np 4 ./${PROJECT_NAME} test/param_aneurysm_regression.xml > test/output_mpi.dat || (cat test/output_mpi.dat\; exit 1)
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
         SOURCES ./${EXECUTABLE_NAME}.cpp
