--- a/examples/codesByTopic/unsignedTypes/CMakeLists.txt
+++ b/examples/codesByTopic/unsignedTypes/CMakeLists.txt
@@ -32,7 +32,8 @@ if (BUILD_TESTING)
     enable_testing()
     add_test(NAME ${CMAKE_CURRENT_SOURCE_DIR}_test
              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test
-             COMMAND ${CMAKE_COMMAND} -E compare_files ref.dat output.dat)
+             # COMMAND ${CMAKE_COMMAND} -E compare_files ref.dat output.dat)
+             COMMAND diff ref.dat output.dat)
 endif()
 
 ###############################################################################
