updated parallel tests to be separated from sequential ones

--- a/examples/codesByTopic/asinariDynamics/CMakeLists.txt
+++ b/examples/codesByTopic/asinariDynamics/CMakeLists.txt
@@ -26,6 +26,8 @@ if(BUILD_TESTING)
         COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
         SOURCES ./${EXECUTABLE_NAME}.cpp
     )
+endif()
+if (BUILD_TESTING_MPI)
     add_custom_target(${PROJECT_NAME}_test_mpi
         ALL
         DEPENDS ${PROJECT_NAME}
@@ -42,6 +44,9 @@ if (BUILD_TESTING)
     add_test(NAME ${CMAKE_CURRENT_SOURCE_DIR}_test
              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test
              COMMAND ${CMAKE_COMMAND} -E compare_files ref.dat output.dat)
+endif()
+if (BUILD_TESTING_MPI)
+    enable_testing()
     add_test(NAME ${CMAKE_CURRENT_SOURCE_DIR}_test_mpi
              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test
              COMMAND diff ref.dat output_mpi.dat)
