trying to fix parallel test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,13 +31,17 @@ cache:
         - ${PWD}/${CCACHE_BASE}/${CCACHE_DEB_GCC_SER}
         - ${PWD}/${CCACHE_BASE}/${CCACHE_DEB_GCC_PAR}
 
+# stages:
+#     - prepare_docker
+#     - check_format
+#     - build_cmake
+#     - regression_tests
+#     - parallel_regression_tests
+#     - deploy
+
 stages:
     - prepare_docker
-    # - check_format
-    # - build_cmake
-    # - regression_tests
     - parallel_regression_tests
-    - deploy
 
 # Build and test stages are using a docker image containing package
 # needed to build and run a Palabos application.
