--- a/examples/showCases/partialBounceBack/CMakeLists.txt
+++ b/examples/showCases/partialBounceBack/CMakeLists.txt
@@ -29,14 +29,15 @@ if(BUILD_TESTING)
     )
 endif()
 if(BUILD_TESTING_MPI)
-    add_custom_target(${PROJECT_NAME}_test_mpi
-        ALL
-        DEPENDS ${PROJECT_NAME}
-        COMMAND "LSAN_OPTIONS=suppressions=${LSAN_SUPPRESSION_FILE}" mpirun --allow-run-as-root -np 4 ./${PROJECT_NAME} > test/output_mpi.dat || (cat test/output_mpi.dat\; exit 1)
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
-        SOURCES ./${EXECUTABLE_NAME}.cpp
-    )
+    message("MPI test is deactivated until a reproducibility with PRNG is corrected")
+    # add_custom_target(${PROJECT_NAME}_test_mpi
+    #     ALL
+    #     DEPENDS ${PROJECT_NAME}
+    #     COMMAND "LSAN_OPTIONS=suppressions=${LSAN_SUPPRESSION_FILE}" mpirun --allow-run-as-root -np 4 ./${PROJECT_NAME} > test/output_mpi.dat || (cat test/output_mpi.dat\; exit 1)
+    #     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    #     COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
+    #     SOURCES ./${EXECUTABLE_NAME}.cpp
+    # )
 endif()
 
 
@@ -47,10 +48,11 @@ if (BUILD_TESTING)
              COMMAND ${CMAKE_COMMAND} -E compare_files ref.dat output.dat)
     endif()
 if (BUILD_TESTING_MPI)
-    enable_testing()
-    add_test(NAME ${CMAKE_CURRENT_SOURCE_DIR}_test_mpi
-             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test
-             COMMAND diff ref.dat output_mpi.dat)
+    message("MPI test is deactivated until a reproducibility with PRNG is corrected")
+    # enable_testing()
+    # add_test(NAME ${CMAKE_CURRENT_SOURCE_DIR}_test_mpi
+    #          WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test
+    #          COMMAND diff ref.dat output_mpi.dat)
 endif()
 
 ###############################################################################
