corrected typo in cmakelists

--- a/examples/showCases/rectangularChannelWithCylinder3d/CMakeLists.txt
+++ b/examples/showCases/rectangularChannelWithCylinder3d/CMakeLists.txt
@@ -30,7 +30,7 @@ if(BUILD_TESTING_MPI)
     add_custom_target(${PROJECT_NAME}_test_mpi
         ALL
         DEPENDS ${PROJECT_NAME}
-        COMMAND "LSAN_OPTIONS=suppressions=${LSAN_SUPPRESSION_FILE}" mpirun --allow-run-as-root -np 4 ./${PROJECT_NAME} 1000 10 1 5 10 30 10 > test/output_mpi.dat || (cat test/output_mpi.dat\; exit 1)
+         COMMAND "LSAN_OPTIONS=suppressions=${LSAN_SUPPRESSION_FILE}" mpirun --allow-run-as-root -np 4 ./${PROJECT_NAME} 1000 10 1 5 10 30 10 > test/output_mpi.dat || (cat test/output_mpi.dat\; exit 1)
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
         SOURCES ./${EXECUTABLE_NAME}.cpp
@@ -69,7 +69,7 @@ set(EXECUTABLE_NAME "rectangularChannelWithCylinder3d")
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "../")
 
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE "Test")
+    set(CMAKE_BUILD_TYPE "Release")
     #set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 endif()
 message("Generated with config types: ${CMAKE_CONFIGURATION_TYPES}")
