trying oversubscribe and removing all other stuff except parallel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,11 +33,11 @@ cache:
 
 stages:
     - prepare_docker
-    - check_format
-    - build_cmake
-    - regression_tests
+    # - check_format
+    # - build_cmake
+    # - regression_tests
     - parallel_regression_tests
-    - deploy
+    # - deploy
 
 # Build and test stages are using a docker image containing package
 # needed to build and run a Palabos application.
